--- a/Copy_of_phase_2.ipynb
+++ b/Copy_of_phase_2.ipynb
@@ -6640,65 +6640,20 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 106
         },
         "id": "ltgqB2gpAQmw",
-        "outputId": "b726a23f-08c8-4a51-bbc1-ba35ebd6f1ad"
+        "outputId": "7b8678d9-d4a6-4894-92e6-fbf835b40e86"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Columns: ['cleaned_text', 'cleaned_response']\n",
-            "SVM Report:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "     account       0.83      0.96      0.89        25\n",
-            "     battery       0.93      0.96      0.95        28\n",
-            "cancellation       1.00      1.00      1.00        28\n",
-            "        data       0.97      0.97      0.97        34\n",
-            "    delivery       1.00      0.97      0.98        30\n",
-            "     display       1.00      1.00      1.00        35\n",
-            "    hardware       0.97      0.87      0.92        38\n",
-            "installation       1.00      1.00      1.00        24\n",
-            "     network       0.91      1.00      0.95        39\n",
-            "     payment       0.97      1.00      0.98        30\n",
-            "  peripheral       1.00      1.00      1.00        31\n",
-            "     product       0.99      0.98      0.98       128\n",
-            "      refund       1.00      0.93      0.97        45\n",
-            "    software       0.95      0.95      0.95        39\n",
-            "\n",
-            "    accuracy                           0.97       554\n",
-            "   macro avg       0.97      0.97      0.97       554\n",
-            "weighted avg       0.97      0.97      0.97       554\n",
-            "\n",
-            "Random Forest Report:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "     account       0.96      0.96      0.96        25\n",
-            "     battery       0.85      1.00      0.92        28\n",
-            "cancellation       1.00      1.00      1.00        28\n",
-            "        data       0.97      1.00      0.99        34\n",
-            "    delivery       1.00      1.00      1.00        30\n",
-            "     display       1.00      1.00      1.00        35\n",
-            "    hardware       1.00      0.95      0.97        38\n",
-            "installation       1.00      1.00      1.00        24\n",
-            "     network       1.00      1.00      1.00        39\n",
-            "     payment       0.97      0.93      0.95        30\n",
-            "  peripheral       1.00      1.00      1.00        31\n",
-            "     product       1.00      0.99      1.00       128\n",
-            "      refund       1.00      0.96      0.98        45\n",
-            "    software       1.00      1.00      1.00        39\n",
-            "\n",
-            "    accuracy                           0.99       554\n",
-            "   macro avg       0.98      0.98      0.98       554\n",
-            "weighted avg       0.99      0.99      0.99       554\n",
-            "\n",
-            "\n",
-            "User Query: issue with product setup\n",
-            "Chatbot Response: consider activity collection whole weight bank loss\n"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax. Perhaps you forgot a comma? (<ipython-input-1-c6d4cabbfe52>, line 15)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-c6d4cabbfe52>\"\u001b[0;36m, line \u001b[0;32m15\u001b[0m\n\u001b[0;31m    print(\"Columns:\",df df.columns.tolist())\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
           ]
         }
       ]
