--- a/customer1.ipynb
+++ b/customer1.ipynb
@@ -2088,7 +2088,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 447,
+          "height": 437,
           "referenced_widgets": [
             "56cbd464bb2944f29479f31f206d37e5",
             "c11b6a9a3bf24117908a0a7336037804",
@@ -2159,12 +2159,15 @@
           ]
         },
         "id": "vPbZevuWRZgI",
-        "outputId": "9a4e67f1-580d-40a6-e72c-ec067d55c8d5"
+        "outputId": "d7e81e9e-538f-46ce-fed0-6c2f6d489688"
       },
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.11/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
             "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
@@ -2175,100 +2178,106 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "56cbd464bb2944f29479f31f206d37e5",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "tokenizer_config.json:   0%|          | 0.00/614 [00:00<?, ?B/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "56cbd464bb2944f29479f31f206d37e5"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "d5db1051853c477ba43d8932c51cd779",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "vocab.json:   0%|          | 0.00/1.04M [00:00<?, ?B/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "d5db1051853c477ba43d8932c51cd779"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "8602996601c24ae3bf980337c18ac446",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "merges.txt:   0%|          | 0.00/456k [00:00<?, ?B/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "8602996601c24ae3bf980337c18ac446"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "e541a7fe382142e9a4d7e97d8fa9bc86",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "config.json:   0%|          | 0.00/641 [00:00<?, ?B/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "e541a7fe382142e9a4d7e97d8fa9bc86"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b008479644214ee0857fd2176cd57f45",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "model.safetensors:   0%|          | 0.00/351M [00:00<?, ?B/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "b008479644214ee0857fd2176cd57f45"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "5e658b9adcf94b1ebb0176dd4c945186",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "generation_config.json:   0%|          | 0.00/124 [00:00<?, ?B/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "5e658b9adcf94b1ebb0176dd4c945186"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             " * Serving Flask app '__main__'\n",
             " * Debug mode: on\n"
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:werkzeug:\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
             " * Running on http://127.0.0.1:5000\n",
